--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--
 Name: Peter Ellis
 File Name: Index.html, Home Page
-Date: 10/28/2025
+Date: 11/11/2025
 Assignment: Capstone Project
 -->
 <!DOCTYPE html>
@@ -37,11 +37,10 @@ Assignment: Capstone Project
 
         <section aria-labelledby="home-heading">
           <h2 id="home-heading">
-            Welcome to the Home Page - The Lord of the Rings Fan Site by Peter Ellis
+          Welcome to the Home Page - The Lord of the Rings Fan Site by Peter Ellis
           </h2>
-          <ul>
-            <li>Explore the world of Middle-Earth with your friends.</li>
-          </ul>
+          <p>Explore the world of Middle-Earth with your friends.</p>
+        </section>
         </section>
 
         <section aria-labelledby="about-heading">
