--- a/landmarks.html
+++ b/landmarks.html
@@ -1,7 +1,7 @@
 <!--
 Name: Peter Ellis
 File Name: landmarks.html, LandMark Page
-Date: 10/28/2025
+Date: 11/11/2025
 Assignment: Capstone Project
 -->
 <!DOCTYPE html>
@@ -39,6 +39,7 @@ Assignment: Capstone Project
 
       <main class="site-main" id="main-content">
         <section aria-labelledby="table-heading">
+          <h2 id="placement">════════════════════════════════════════════════════════════════════</h2>
           <h2 id="table-heading">
             A Table of the Great Elven Realms of the Fourth Age
           </h2>
@@ -102,7 +103,151 @@ Assignment: Capstone Project
           </div>
         </section>
 
+        <!-- Peter Ellis - 11/11/2025 - Details & Summary Widget -->
+        <section id="fun-facts" aria-labelledby="fun-facts-heading">
+          <h2 id="placement">════════════════════════════════════════════════════════════════════</h2>
+          <h2 id="fun-facts-heading">
+            Tolkien Lore - The Awakening of the Elves
+          </h2>
+
+          <details>
+            <summary>Why is Valinor called the Undying Lands?</summary>
+            <p>
+              Valinor is called the Undying Lands because its inhabitants, the
+              immortal Valar, Maiar, and many Elves. Do not age or die from
+              natural causes. The land itself is a place of eternal peace and
+              beauty where nothing fades, sickens, or withers. While the Elves
+              are immortal and can live there forever. But Mortals, Hobbits,
+              Dwarves who do try to go will all die in the sea trying to find
+              it. The only non-elven kind to go to the undying lands were the
+              two Hobbits Bilbo and Frodo. And the one Dwarf Gimili. Who were
+              granted special permission by the God Eru Ilúvatar.
+            </p>
+          </details>
+
+          <details>
+            <summary>
+              Who were the first Elves to awaken in Middle-earth?
+            </summary>
+            <p>
+              The first Elves to awaken at the waters of Cuiviénen were
+              Imin, Tata, and Enel, along with their wives Iminyë, Tatië, and Enelyë.
+              These six were the ancestors of all Elvenkind, and the first to call themselves
+              Quendi - "The Ones Who Speak."</p>
+          </details>
+
+          <details>
+            <summary>What were the three original Elven Clans?</summary>
+            <p>
+              Each Elf-father gathered followers who became the first three clans of the Elves:
+            </p>
+            <ul>
+              <li>
+                Minyar - The "Firsts" followers of Imin, later known as the Vanyar.
+              </li>
+              <li>
+                Tatyar - The "Seconds" followers of Tata, later known as the Noldor.
+              </li>
+              <li>
+                Nelyar -  The "Thirds" followers of Enel, later known as the Teleri.
+              </li>
+            </ul>
+          </details>
+
+          <details>
+            <summary>What was the Great Journey?</summary>
+            <p>
+              The Valar invited the Elves to come west to Aman, the Blessed
+              Realm. Those who accepted the journey became known as the
+              Eldar "People of the Stars".
+              While those who refused remained were called the Avari "The Unwilling".
+            </p>
+          </details>
+
+          <details>
+            <summary>How did the Elven Clans divide afterward?</summary>
+            <p>
+              During the Great Journey, the Elves/Eldar separated into distinct
+              Clans based on their choices and experiences :
+            </p>
+            <ul>
+              <li>
+                Vanyar - The Fair Elves, led by Ingwë, first to reach Aman.
+              </li>
+              <li>
+                Noldor - The Deep Elves, led by Finwë, lovers of craft and lore.
+              </li>
+              <li>
+                Teleri - The Singers, led by Elwë and Olwë, many of whom lingered or turned back along the journey.
+              </li>
+            </ul>
+          </details>
+
+          <details>
+            <summary>Who were the Teleri and their subgroups?</summary>
+            <p>
+              The Teleri were the most divided of the Elves, forming several
+              branches :
+            </p>
+            <ul>
+              <li>
+                Falmari - The Sea-Elves who reached Aman with Olwë.
+              </li>
+              <li>
+                Sindar - The Grey-Elves who remained in Beleriand under King Elwë (Thingol).
+              </li>
+              <li>
+                Nandor - Those who turned back east of the Misty Mountains under Lenwë.
+              </li>
+              <li>
+                Laiquendi - Elves under the Nandor who went on past the Mountains Who
+                were later known as the The Green-Elves of Ossiriand, led by Denethor.
+              </li>
+              <li>
+                Silvan - The Wood-Elves of Mirkwood and Lothlórien, descendants of the Nandor.
+              </li>
+            </ul>
+          </details>
+
+          <details>
+            <summary>What are the Calaquendi and Moriquendi?</summary>
+            <p>The Elves were later divided into two great groups :</p>
+            <ul>
+              <li>
+                Calaquendi - "Elves of the Light" who reached Aman and saw the light of the Two Trees.
+              </li>
+              <li>
+                Moriquendi - "Elves of the Darkness" who never saw that light, including the Sindar, Nandor, and Avari.
+              </li>
+            </ul>
+          </details>
+
+          <details>
+            <summary>What language did the Elves of Rivendell speak?</summary>
+            <p>
+              The Elves of Rivendell primarily spoke
+              Sindarin - For daily speech and Quenya for ceremony and teaching.
+              Both Elven languages originally created by J.R.R. Tolkien himself.
+            </p>
+          </details>
+        </section>
+
+        <!-- Peter Ellis - 11/11/2025 - CSS Image Gallery -->
+        <section id="gallery" aria-labelledby="gallery-heading">
+          <h2 id="gallery-heading">══════════════════════════════Image Gallery══════════════════════════════</h2>
+          <div class="gallery">
+            <img src="images/Ostin_Edhil.png"/>
+            <img src="images/Grey_Havens.png"/>
+            <img src="images/Lorien_1.png"/>
+            <img src="images/Rivdendell_1.png"/>
+            <img src="images/Felegoth_1.png"/>
+            <img src="images/Edhellond.png"/>
+          </div>
+        </section>
+
+
         <section aria-labelledby="lorien">
+          <h2 id="placement">════════════════════════════════════════════════════════════════════</h2>
           <h2 id="lorien">The Land of Lothlórien</h2>
           <img src="images/Lorien_1.png" alt="Lothlórien, the Golden Wood" />
           <p>
@@ -250,6 +395,7 @@ Assignment: Capstone Project
             awaited him. The ships vanished into the light beyond the horizon,
             and with them passed the last breath of Elvendom in Middle-Earth.
           </p>
+          <h2 id="placement">════════════════════════════════════════════════════════════════════</h2>
         </section>
       </main>
 
