--- a/form.html
+++ b/form.html
@@ -1,7 +1,7 @@
 <!--
 Name: Peter Ellis
 File Name: form.html, Form Page
-Date: 11/11/2025
+Date: 11/18/2025
 Assignment: Capstone Project
 -->
 <!DOCTYPE html>
@@ -12,6 +12,7 @@ Assignment: Capstone Project
     <title>Tales of Middle-Earth - Contact Form</title>
     <link rel="icon" href="images/One_Ring.png" type="image/png" />
     <link rel="stylesheet" href="styles.css" />
+    <audio id="clickSound" src="audio/Click%201.mp3" preload="auto"></audio>
   </head>
 
   <body>
@@ -26,10 +27,10 @@ Assignment: Capstone Project
         <a href="features.html">Features</a>
         <a href="landmarks.html">Landmarks</a>
         <a href="films.html">Films</a>
+        <a href="products.html">Products</a>
         <a href="form.html" class="active">Form</a>
       </nav>
 
-      <!-- Background Music -->
       <aside class="media-bar" aria-label="Background music">
         <audio controls autoplay>
           <source src="audio/Website_Song.mp3" type="audio/mp3" />
@@ -99,5 +100,6 @@ Assignment: Capstone Project
         <a href="mailto:pellis2@my.westga.edu">pellis2@my.westga.edu</a>
       </footer>
     </div>
+    <script src="Sound.js"></script>
   </body>
 </html>
