--- a/landmarks.html
+++ b/landmarks.html
@@ -1,7 +1,7 @@
 <!--
 Name: Peter Ellis
 File Name: landmarks.html, LandMark Page
-Date: 11/11/2025
+Date: 11/18/2025
 Assignment: Capstone Project
 -->
 <!DOCTYPE html>
@@ -12,6 +12,8 @@ Assignment: Capstone Project
     <title>Tales of Middle-Earth - Landmarks</title>
     <link rel="icon" href="images/One_Ring.png" type="image/png" />
     <link rel="stylesheet" href="styles.css" type="text/css" />
+    <audio id="clickSound" src="audio/Click%201.mp3" preload="auto"></audio>
+
   </head>
 
   <body>
@@ -26,6 +28,7 @@ Assignment: Capstone Project
         <a href="features.html">Features</a>
         <a href="landmarks.html" class="active">Landmarks</a>
         <a href="films.html">Films</a>
+        <a href="products.html">Products</a>
         <a href="form.html">Form</a>
       </nav>
 
@@ -404,5 +407,6 @@ Assignment: Capstone Project
         <a href="mailto:pellis2@my.westga.edu">pellis2@my.westga.edu</a>
       </footer>
     </div>
+        <script src="Sound.js"></script>
   </body>
 </html>
